<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data />
    <androidx.cardview.widget.CardView
        android:id="@+id/carView"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_width"
        android:layout_marginTop="@dimen/card_margin"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height">

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginStart="@dimen/line_basic"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/gender"
            app:layout_constraintEnd_toStartOf="@+id/tvItemGender"
            app:layout_constraintHorizontal_bias="@dimen/bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvRace"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginStart="@dimen/line_basic"
            android:layout_marginTop="@dimen/margin_basic"
            android:text="@string/race"
            app:layout_constraintEnd_toStartOf="@+id/tvItemRace"
            app:layout_constraintHorizontal_bias="@dimen/bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGender" />

        <TextView
            android:id="@+id/tvHeight"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginStart="@dimen/line_basic"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/height"
            app:layout_constraintEnd_toStartOf="@+id/tvItemHeight"
            app:layout_constraintHorizontal_bias="@dimen/bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRace" />

        <TextView
            android:id="@+id/tvWeight"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginStart="@dimen/line_basic"
            android:layout_marginTop="@dimen/margin_basic"
            android:text="@string/weight"
            app:layout_constraintEnd_toStartOf="@+id/tvItemWeight"
            app:layout_constraintHorizontal_bias="@dimen/bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeight" />

        <TextView
            android:id="@+id/tvEyeColor"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginStart="@dimen/line_basic"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/eye_color"
            app:layout_constraintEnd_toStartOf="@+id/tvItemEyeColor"
            app:layout_constraintHorizontal_bias="@dimen/bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWeight" />

        <TextView
            android:id="@+id/tvHairColor"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginStart="@dimen/line_basic"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/hair_color"
            app:layout_constraintEnd_toStartOf="@+id/tvItemHairColor"
            app:layout_constraintHorizontal_bias="@dimen/bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEyeColor" />

        <TextView
            android:id="@+id/tvItemGender"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_end2"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Available comics 16" />

        <TextView
            android:id="@+id/tvItemRace"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginTop="@dimen/margin_basic"
            android:layout_marginEnd="@dimen/margin_end2"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemGender"
            tools:text="Available comics 16" />

        <TextView
            android:id="@+id/tvItemHeight"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginTop="@dimen/margin_basic"
            android:layout_marginEnd="@dimen/margin_end2"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemRace"
            tools:text="Available comics 16" />

        <TextView
            android:id="@+id/tvItemWeight"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/margin_end2"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemHeight"
            tools:text="Available comics 16" />

        <TextView
            android:id="@+id/tvItemEyeColor"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/margin_end2"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemWeight"
            tools:text="Available comics 16" />

        <TextView
            android:id="@+id/tvItemHairColor"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/margin_end"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemEyeColor"
            tools:text="Available comics 16" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
