<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data />
    <androidx.cardview.widget.CardView
        android:id="@+id/carView"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_width"
        android:layout_marginTop="@dimen/card_margin"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height">


        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginStart="@dimen/line_basic"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/full_name"
            app:layout_constraintEnd_toStartOf="@+id/tvItemFullName"
            app:layout_constraintHorizontal_bias="@dimen/bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvEgos"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginStart="@dimen/line_basic"
            android:layout_marginTop="@dimen/margin_basic"
            android:text="@string/alter_egos"
            app:layout_constraintEnd_toStartOf="@+id/tvItemEgos"
            app:layout_constraintHorizontal_bias="@dimen/bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFullName" />

        <TextView
            android:id="@+id/tvAliases"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginStart="@dimen/line_basic"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/aliases"
            app:layout_constraintEnd_toStartOf="@+id/tvItemAliases"
            app:layout_constraintHorizontal_bias="@dimen/bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEgos" />

        <TextView
            android:id="@+id/tvBirth"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginStart="@dimen/line_basic"
            android:layout_marginTop="@dimen/margin_basic"
            android:text="@string/birth"
            app:layout_constraintEnd_toStartOf="@+id/tvItemBirth"
            app:layout_constraintHorizontal_bias="@dimen/bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAliases" />

        <TextView
            android:id="@+id/tvAppearence"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginStart="@dimen/line_basic"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/appearance"
            app:layout_constraintEnd_toStartOf="@+id/tvItemAppearence"
            app:layout_constraintHorizontal_bias="@dimen/bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBirth" />

        <TextView
            android:id="@+id/tvPublisher"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginStart="@dimen/line_basic"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/publisher"
            app:layout_constraintEnd_toStartOf="@+id/tvItemPublisher"
            app:layout_constraintHorizontal_bias="@dimen/bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAppearence" />

        <TextView
            android:id="@+id/tvItemFullName"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_end2"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Available comics 16" />

        <TextView
            android:id="@+id/tvItemEgos"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginTop="@dimen/margin_basic"
            android:layout_marginEnd="@dimen/margin_end2"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemFullName"
            tools:text="Available comics 16" />

        <TextView
            android:id="@+id/tvItemAliases"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginTop="@dimen/margin_basic"
            android:layout_marginEnd="@dimen/margin_end2"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemEgos"
            tools:text="Available comics 16" />

        <TextView
            android:id="@+id/tvItemBirth"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/margin_end2"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemAliases"
            tools:text="Available comics 16" />

        <TextView
            android:id="@+id/tvItemAppearence"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/margin_end2"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemBirth"
            tools:text="Available comics 16" />

        <TextView
            android:id="@+id/tvItemPublisher"
            android:layout_width="@dimen/item_medium"
            android:layout_height="@dimen/margin_basic"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/margin_end"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemAppearence"
            tools:text="Available comics 16" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
