<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data />
    <androidx.cardview.widget.CardView
        android:id="@+id/carView"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_width"
        android:layout_marginTop="@dimen/card_margin"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height">

            <TextView
                android:id="@+id/tvIntelligence"
                android:layout_width="@dimen/item_medium"
                android:layout_height="@dimen/margin_basic"
                android:layout_marginStart="@dimen/line_basic"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/intelligence"
                app:layout_constraintEnd_toStartOf="@+id/tvItemIntelligence"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvstrength"
                android:layout_width="@dimen/item_medium"
                android:layout_height="@dimen/margin_basic"
                android:layout_marginStart="@dimen/line_basic"
                android:layout_marginTop="@dimen/margin_basic"
                android:text="@string/strength"
                app:layout_constraintEnd_toStartOf="@+id/tvItemStrength"
                app:layout_constraintHorizontal_bias="@dimen/bias"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvIntelligence" />

            <TextView
                android:id="@+id/tvSpeed"
                android:layout_width="@dimen/item_medium"
                android:layout_height="@dimen/margin_basic"
                android:layout_marginStart="@dimen/line_basic"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/speed"
                app:layout_constraintEnd_toStartOf="@+id/tvItemSpeed"
                app:layout_constraintHorizontal_bias="@dimen/bias"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvstrength" />

            <TextView
                android:id="@+id/tvDurability"
                android:layout_width="@dimen/item_medium"
                android:layout_height="@dimen/margin_basic"
                android:layout_marginStart="@dimen/line_basic"
                android:layout_marginTop="@dimen/margin_basic"
                android:text="@string/durability"
                app:layout_constraintEnd_toStartOf="@+id/tvItemDurability"
                app:layout_constraintHorizontal_bias="@dimen/bias"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSpeed" />

            <TextView
                android:id="@+id/tvPower"
                android:layout_width="@dimen/item_medium"
                android:layout_height="@dimen/margin_basic"
                android:layout_marginStart="@dimen/line_basic"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/power"
                app:layout_constraintEnd_toStartOf="@+id/tvItemPower"
                app:layout_constraintHorizontal_bias="@dimen/bias"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDurability" />

            <TextView
                android:id="@+id/tvCombat"
                android:layout_width="@dimen/item_medium"
                android:layout_height="@dimen/margin_basic"
                android:layout_marginStart="@dimen/line_basic"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/combat"
                app:layout_constraintEnd_toStartOf="@+id/tvItemCombat"
                app:layout_constraintHorizontal_bias="@dimen/bias"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPower" />

            <TextView
                android:id="@+id/tvItemIntelligence"
                android:layout_width="@dimen/item_medium"
                android:layout_height="@dimen/margin_basic"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_end2"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Available comics 16" />

            <TextView
                android:id="@+id/tvItemStrength"
                android:layout_width="@dimen/item_medium"
                android:layout_height="@dimen/margin_basic"
                android:layout_marginTop="@dimen/margin_basic"
                android:layout_marginEnd="@dimen/margin_end2"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvItemIntelligence"
                tools:text="Available comics 16" />

            <TextView
                android:id="@+id/tvItemSpeed"
                android:layout_width="@dimen/item_medium"
                android:layout_height="@dimen/margin_basic"
                android:layout_marginTop="@dimen/margin_basic"
                android:layout_marginEnd="@dimen/margin_end2"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvItemStrength"
                tools:text="Available comics 16" />

            <TextView
                android:id="@+id/tvItemDurability"
                android:layout_width="@dimen/item_medium"
                android:layout_height="@dimen/margin_basic"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/margin_end2"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvItemSpeed"
                tools:text="Available comics 16" />

            <TextView
                android:id="@+id/tvItemPower"
                android:layout_width="@dimen/item_medium"
                android:layout_height="@dimen/margin_basic"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/margin_end2"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvItemDurability"
                tools:text="Available comics 16" />

            <TextView
                android:id="@+id/tvItemCombat"
                android:layout_width="@dimen/item_medium"
                android:layout_height="@dimen/margin_basic"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/margin_end"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvItemPower"
                tools:text="Available comics 16" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
