<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/detail_screen_fragment">

        <ImageView
            android:id="@+id/imageHeroe"
            android:layout_width="203dp"
            android:layout_height="207dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.548"
            app:layout_constraintStart_toEndOf="@+id/imageHeroe"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvOcupation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/occupation"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.081"
            app:layout_constraintStart_toEndOf="@+id/imageHeroe"
            app:layout_constraintTop_toBottomOf="@+id/tvWork" />

        <TextView
            android:id="@+id/tvBaseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/base"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintStart_toEndOf="@+id/imageHeroe"
            app:layout_constraintTop_toBottomOf="@+id/tvOcupationText" />

        <TextView
            android:id="@+id/tvOcupationText"
            android:layout_width="168dp"
            android:layout_height="59dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toEndOf="@+id/imageHeroe"
            app:layout_constraintTop_toBottomOf="@+id/tvOcupation"
            tools:text="@string/occupation" />

        <TextView
            android:id="@+id/tvBaseText"
            android:layout_width="168dp"
            android:layout_height="62dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toEndOf="@+id/imageHeroe"
            app:layout_constraintTop_toBottomOf="@+id/tvBaseTitle"
            tools:text="@string/base" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextAppearance="@style/MyTabStyle"
            app:layout_constraintTop_toBottomOf="@+id/imageHeroe" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="409dp"
            android:layout_height="429dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
